# Project-1

./: .cursorrules  .editorconfig  .gitignore  API_KEYS_SETUP_GUIDE.md  CLOUD_TUNNEL_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_HANDOFF.md  FULL_DEPLOYMENT_GUIDE.md  LAUNCH_PROEDIT.bat  LOCAL_HOSTING_GUIDE.md  README.md  api.json  design_guidelines.json  docker-compose.yml  frontend.json  generate_pipeline.json  inspect_db.json  install.json  n8n.json  ollama.json  pinokio.js  pro_e2e.json  proedit_workflow.json  render.yaml  start.json  start_locally.ps1  tailscale.json  update.json  verify_db_interaction.py  worker.json
backend/: .env  .env.example  .env.production  .pre-commit-config.yaml  Dockerfile  Makefile  bkash_service.py  check_api_celery.py  check_job_times.py  check_ollama.ps1  debug_env.py  diagnostic.py  dispatch_debug.txt  fix_job_records.py  list_jobs.py  modal_worker.py  package-lock.json  package.json  pip_audit_waivers.txt  promote_admin.py  pyproject.toml  pytest.ini  render-build.sh  requirements.in  requirements.snapshot.txt  requirements.txt  run_worker.ps1  scheduler.py  server.py  start-worker.bat  start.sh  start_production_local.ps1  tailscale_funnel.ps1
backend/alembic/: env.py
backend/app/: celery_app.py  config.py  db.py  deps.py  errors.py  logging_config.py  main.py  models.py  schemas.py  security.py
backend/docs/: READINESS.md  rollout.md
backend/prompts/: README.md  changelog.md
backend/scripts/: bootstrap.bat  bootstrap.sh  check_jobs.py  check_openai_direct.py  debug_celery.py  deep_search.py  diagnostic.py  generate_hybrid_pipeline.py  generate_pro_pipeline.py  generate_universal_pipeline.py  gift_credits.py  modal_setup.py  modal_worker.py  poc_moviepy.py  readiness_check.py  reset_job.py  reset_specific_job.py  smoke_test_mvp.py  test_autonomy_llm.py  test_celery_send.py  test_enqueue_real.py  test_n8n_webhook.py  test_ollama.py  test_openrouter.py  test_phase_7.py  (+8 more)
(+323 files in other folders)
